ci: improve ci workflow

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,40 @@
 org.gradle.jvmargs=-Xmx7G -Dhttp.readTimeout\=300000 -Dhttp.connectionTimeout\=300000 -Dhttp.socketTimeout\=300000 -Dorg.gradle.internal.http.socketTimeout\=300000 -Dorg.gradle.internal.http.connectionTimeout\=300000 -Dorg.gradle.internal.http.readTimeout\=300000
 org.gradle.daemon=false
 
+# =========================
+# mod version configuration
+# =========================
+
+minecraft_version=1.19.2
+
+# base version, follow the semver specification
+mod_version = 0.22.0
+
+# internal/nightly/alpha/beta/rc/release
+channel = alpha
+
+# only works for alpha/beta/rc build, the serial number
+snapshot_serial = 0
+
+# internal builder code
+internal_code = UNKN
+
+# [kasugalib only] the repository type, normal or create
+type = normal
+
+
+# =========================
+# dependencies
+# =========================
 curios_version =1.19.2-5.1.1.0
 jei_minecraft_version=1.19.2
 mixin_version=0.8.5
 mixingradle_version = 0.7.+
 jei_version=11.2.0.246
-mc_version=1.19.2
-
-mod_version = 1.19.2-0.22.0
-jarVersion = 1.19.2-0.22.0
-
 registrate_version = MC1.19-1.1.5
 
+# =========================
+# compile options
+# =========================
 javetLibraryExcluding = false
 compileTarget = normal
