--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,11 @@ on:
         type: boolean
         default: false
 
+    secrets:
+      KUAYUE_MAVEN_USERNAME:
+        required: false
+      KUAYUE_MAVEN_PASSWORD:
+        required: false
 
 jobs:
   build:
