--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,9 +63,9 @@ jobs:
       - name: Build and Publish KasugaLib
         if: ${{ inputs.publish }}
         run: |
-          ./gradlew build publishAllPublicationsToKuayueMavenRepository -Pchannel=${{ inputs.channel }} -Pgit_version=$(git rev-parse --short HEAD)
+          ./gradlew build publishAllPublicationsToKuayueMavenRepository -Pchannel=${{ inputs.channel }} -Pgit_version=$(git rev-parse --short HEAD) -PkuayueMavenUsername = "${{ secrets.KUAYUE_MAVEN_USERNAME }}" -PkuayueMavenPassword = "${{ secrets.KUAYUE_MAVEN_PASSWORD }}"
 
       - name: Build KasugaLib
         if: ${{ !inputs.publish }}
         run: |
-          ./gradlew build -Pchannel=${{ inputs.channel }} -Pgit_version=$(git rev-parse --short HEAD) -PkuayueMavenUsername = "${{ secrets.KUAYUE_MAVEN_USERNAME }}" -PkuayueMavenPassword = "${{ secrets.KUAYUE_MAVEN_PASSWORD }}"
+          ./gradlew build -Pchannel=${{ inputs.channel }} -Pgit_version=$(git rev-parse --short HEAD)
