fix: try to fix forge gradle maven network issues

--- a/build.gradle
+++ b/build.gradle
@@ -210,6 +210,11 @@ repositories {
     //     dir 'libs'
     // }
     maven {
+        name = 'forge build minecraft'
+        url = 'https://lss233.littleservice.cn/repositories/minecraft'
+    }
+    mavenCentral()
+    maven {
         name = 'tterrag maven'
         url = 'https://maven.tterrag.com/'
     }
