ci: fix alpha releaser

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -1,5 +1,9 @@
 on:
   push:
+    branches:
+      - 'alpha/*'
+      - 'beta/*'
+      - 'rc/*'
     tags:
       - 'alpha/v*-alpha.*'
       - 'beta/v*-beta.*'
