--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ channel = alpha
 snapshot_serial = 0
 
 # internal builder code
-internal_code = UNKN
+internal_code = TFTL
 
 # [kasugalib only] the repository type, normal or create
 type = normal
