--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ minecraft_version=1.20.1
 mod_version = 1.20.1-0.21.4-create
 
 # internal/nightly/alpha/beta/rc/release
-channel = alpha
+channel = nightly
 
 # only works for alpha/beta/rc build, the serial number
 snapshot_serial = 0
