--- a/.github/workflows/nightly-1.20.1-create-2.yml
+++ b/.github/workflows/nightly-1.20.1-create-2.yml
@@ -1,4 +1,4 @@
-name: Build Nightly for Minecraft 1.19.2
+name: Build Nightly for Minecraft 1.20.1 (Create Branch)
 on:
   schedule:
     - cron: "0 21 * * *"
