--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ snapshot_serial = 0
 internal_code = TFTL
 
 # [kasugalib only] the repository type, normal or create
-type = normal
+type = create
 
 # =========================
 # dependencies
