--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.daemon=false
 minecraft_version=1.20.1
 
 # base version, follow the semver specification
-mod_version = 1.20.1-0.21.4-create
+mod_version = 0.22.0
 
 # internal/nightly/alpha/beta/rc/release
 channel = alpha
