Add English translation to feature request template
Updated the feature request template to include an English translation for the problem description.

--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -7,13 +7,16 @@ body:
   - type: textarea
     attributes:
       label: Describe the problem related to the feature request
-      description: 请简要地说明是什么问题导致你想要一个新特性。
+      description: |
+                   请简要地说明是什么问题导致你想要一个新特性。
+                   Please briefly explain what issue led you to want a new feature.
     validations:
       required: true
   - type: textarea
     attributes:
       label: Describe the solution you'd like
       description: 请说明你希望使用什么样的方法 (比如增加什么功能) 解决上述问题。
+                    
     validations:
       required: true
   - type: textarea
