--- a/gradle.properties
+++ b/gradle.properties
@@ -37,13 +37,15 @@ mc_version=1.20.1
 
 jarVersion = 1.20.1-0.21.4-create
 
-create_minecraft_version = 1.20.1
-flywheel_minecraft_version = 1.20.1
-create_version = 0.5.1.j-55
-flywheel_version = 0.6.11-13
-
+create_version = 6.0.8-289
+ponder_version = 1.0.91
+flywheel_version = 1.0.5
 registrate_version = MC1.20-1.3.3
-
+#Proxy for parchment mapping
+systemProp.http.proxyHost=127.0.0.1
+systemProp.http.proxyPort=7897
+systemProp.https.proxyHost=127.0.0.1
+systemProp.https.proxyPort=7897
 # =========================
 # compile options
 # =========================
